--- a/ddp-workspace/projects/ddp-brain-v2/src/styles.scss
+++ b/ddp-workspace/projects/ddp-brain-v2/src/styles.scss
@@ -5,6 +5,7 @@
 @import './styles/password.scss';
 @import './styles/static-page.scss';
 @import './styles/stay-informed.scss';
+@import './styles/activities.scss';
 
 html,
 body {
@@ -64,12 +65,16 @@ body {
     margin: 0 auto;
     padding: 0 1.5625rem;
 
-    &_tight {
-        max-width: 800px;
-    }
-
     &_wide {
         max-width: 1200px;
+    }
+
+    &_medium {
+        max-width: 1000px;
+    }
+
+    &_tight {
+        max-width: 800px;
     }
 }
 
@@ -154,4 +159,10 @@ p {
 
 .italic {
     font-style: italic;
+}
+
+@media only screen and (max-width: 480px) {
+    .content {
+        padding: 0 1rem;
+    }
 }
