--- a/ddp-workspace/projects/ddp-testboston/src/style/activity.scss
+++ b/ddp-workspace/projects/ddp-testboston/src/style/activity.scss
@@ -48,6 +48,15 @@
         font-weight: 400;
         font-size: 1.375rem;
         line-height: 2.0625rem;
+
+        &_column {
+            flex-direction: column;
+        }
+    }
+
+    &__warn {
+        margin-top: 1rem;
+        font-weight: 700;
     }
 }
 
