--- a/ddp-workspace/projects/ddp-brain-v2/src/app/components/data/data.component.html
+++ b/ddp-workspace/projects/ddp-brain-v2/src/app/components/data/data.component.html
@@ -17,24 +17,16 @@
         <div class="content content_medium snapshots-block">
             <h2 translate>DataPage.Snapshots.Title</h2>
             <div class="diagrams">
-                <div class="diagram">
-                    <img lazy-resource class="diagram__image" src="assets/images/diagnosis.png"
-                        [alt]="'DataPage.Snapshots.Type.Alt' | translate">
-                    <p class="diagram__link">
-                        <a class="Link" href="#" target="_blank" translate>DataPage.Snapshots.Type.Link</a>
-                    </p>
-                    <p class="diagram__data" translate>DataPage.Snapshots.Type.Date</p>
-                    <p translate>DataPage.Snapshots.Type.Text</p>
-                </div>
-                <div class="diagram">
-                    <img lazy-resource class="diagram__image" src="assets/images/initial.png"
-                        [alt]="'DataPage.Snapshots.Diagnosis.Alt' | translate">
-                    <p class="diagram__link">
-                        <a class="Link" href="#" target="_blank" translate>DataPage.Snapshots.Diagnosis.Link</a>
-                    </p>
-                    <p class="diagram__data" translate>DataPage.Snapshots.Diagnosis.Date</p>
-                    <p translate>DataPage.Snapshots.Diagnosis.Text</p>
-                </div>
+                <ng-container *ngFor="let diagram of 'DataPage.Snapshots.Diagrams' | translate">
+                    <div class="diagram">
+                        <img lazy-resource class="diagram__image" [src]="diagram.Image" [alt]="diagram.Alt">
+                        <p class="diagram__link">
+                            <a class="Link" href="#" target="_blank">{{diagram.Link}}</a>
+                        </p>
+                        <p class="diagram__data">{{diagram.Date}}</p>
+                        <p>{{diagram.Text}}</p>
+                    </div>
+                </ng-container>
             </div>
         </div>
     </section>
@@ -55,29 +47,14 @@
                 <a class="Link" [href]="'mailto:' + infoEmail">{{infoEmail}}</a>.
             </p>
             <div class="diagrams">
-                <div class="diagram">
-                    <img lazy-resource class="diagram__image" src="assets/images/mbc-data.png"
-                        [alt]="'DataPage.DataRelease.MBC.Alt' | translate">
-                    <p>
-                        <a class="Link" href="#" target="_blank" translate>DataPage.DataRelease.MBC.Link</a>
-                    </p>
-                </div>
-                <div class="diagram diagram_data-release">
-                    <img lazy-resource class="diagram__image" src="assets/images/mpc-data.png"
-                        [alt]="'DataPage.DataRelease.MPC.Alt' | translate">
-                    <p>
-                        <a class="Link" href="#" target="_blank" translate>DataPage.DataRelease.MPC.Link</a>
-                    </p>
-                </div>
-            </div>
-            <div class="diagrams">
-                <div class="diagram">
-                    <img lazy-resource class="diagram__image" src="assets/images/angio-data.png"
-                        [alt]="'DataPage.DataRelease.Angio.Alt' | translate">
-                    <p>
-                        <a class="Link" href="#" target="_blank" translate>DataPage.DataRelease.Angio.Link</a>
-                    </p>
-                </div>
+                <ng-container *ngFor="let diagram of 'DataPage.DataRelease.Diagrams' | translate">
+                    <div class="diagram">
+                        <img lazy-resource class="diagram__image" [src]="diagram.Image" [alt]="diagram.Alt">
+                        <p>
+                            <a class="Link" href="#" target="_blank">{{diagram.Link}}</a>
+                        </p>
+                    </div>
+                </ng-container>
             </div>
         </div>
     </section>
