--- a/ddp-workspace/projects/ddp-brain-v2/src/app/components/faq/faq.component.html
+++ b/ddp-workspace/projects/ddp-brain-v2/src/app/components/faq/faq.component.html
@@ -9,9 +9,9 @@
             <div class="intro-faq-block__content">
                 <p [innerHTML]="'FaqPage.Intro.Text1' | translate"></p>
                 <p>
-                    <span class="medium" translate>Common.CMI</span>,
+                    <a class="Link italic" [href]="cmiUrl" target="_blank" translate>Common.CMI</a>,
                     <span translate>FaqPage.Intro.Text2.Part1</span>
-                    <span class="medium" translate>Common.CMI</span>
+                    <a class="Link italic" [href]="cmiUrl" target="_blank" translate>Common.CMI</a>
                     <span translate>FaqPage.Intro.Text2.Part2</span>
                 </p>
             </div>
