--- a/ddp-workspace/projects/ddp-prion/src/styles.scss
+++ b/ddp-workspace/projects/ddp-prion/src/styles.scss
@@ -3257,7 +3257,7 @@ p.Medium {
   }
 }
 
-.cookiesModal {
+.cookiesModal, .privacyModal {
   &--header {
     display: flex;
     flex-direction: row;
@@ -3341,6 +3341,13 @@ p.Medium {
       color: lightgray;
       margin-bottom: 0;
     }
+  }
+}
+
+
+ddp-privacy-policy-modal {
+  section {
+    padding: 0 10px !important;
   }
 }
 
@@ -3431,7 +3438,7 @@ ddp-cookies-preferences-modal {
 }
 
 @media only screen and (max-width: 1026px) {
-  .cookiesModal {
+  .cookiesModal, .privacyModal {
     &--logo {
       width: 186px;
     }
@@ -3439,7 +3446,7 @@ ddp-cookies-preferences-modal {
 }
 
 @media only screen and (max-width: 767px) {
-  .cookiesModal {
+  .cookiesModal, .privacyModal {
     &--header {
       position: relative;
       flex-direction: column;
@@ -3503,7 +3510,7 @@ ddp-cookies-preferences-modal {
 }
 
 @media only screen and (max-width: 450px) {
-  .cookiesModal {
+  .cookiesModal, .privacyModal {
     &--tabHeader,
     &--actions {
       flex-direction: column;
@@ -3549,6 +3556,10 @@ ddp-privacy-policy-modal {
     .col-lg-8, .col-md-10, .col-sm-12, .col-xs-12 {
       width: 100%;
     }
+  }
+
+  .mat-dialog-content {
+    border-top: 1px grey solid;
   }
 }
 
