--- a/ddp-workspace/projects/ddp-prion/src/styles.scss
+++ b/ddp-workspace/projects/ddp-prion/src/styles.scss
@@ -3573,3 +3573,17 @@ ddp-privacy-policy-modal {
     }
   }
 }
+
+app-third-party {
+  .PageContent-title {
+    margin-bottom: 35px;
+  }
+
+  .third-party--date {
+    margin-top: 50px;
+  }
+
+  .list li {
+    padding: 5px 0;
+  }
+}
