--- a/ddp-workspace/projects/ddp-testboston/src/style/dashboard.scss
+++ b/ddp-workspace/projects/ddp-testboston/src/style/dashboard.scss
@@ -96,14 +96,20 @@
     }
 
     .mat-row {
-        align-items: center !important;
+        align-items: flex-start !important;
         padding: 15px 0 !important;
     }
 
-    .dashboard-status-container__img {
-        height: 25px !important;
-        width: 25px !important;
-        padding: 0 8px 0 0;
+    .dashboard-status-container {
+        &__img {
+            height: 25px !important;
+            width: 25px !important;
+            padding: 0 8px 0 0;
+        }
+
+        &_message {
+            align-items: end !important;
+        }
     }
 
     .Link {
