--- a/ddp-workspace/projects/ddp-prion/src/styles.scss
+++ b/ddp-workspace/projects/ddp-prion/src/styles.scss
@@ -3628,6 +3628,11 @@ app-third-party {
 
   &--request {
     padding: 0 40px;
+
+    textarea.mat-input-element {
+      border: 1px solid lightgray;
+      padding: 15px;
+    }
   }
 
   &--requestSubmitted {
