--- a/ddp-workspace/projects/ddp-brain-v2/src/styles.scss
+++ b/ddp-workspace/projects/ddp-brain-v2/src/styles.scss
@@ -149,6 +149,10 @@ p {
     text-align: center;
 }
 
+.light {
+    font-family: 'Untitled-Sans-Light', sans-serif;
+}
+
 .regular {
     font-family: 'Untitled-Sans-Regular', sans-serif;
 }
