--- a/ddp-workspace/projects/ddp-brain-v2/src/styles.scss
+++ b/ddp-workspace/projects/ddp-brain-v2/src/styles.scss
@@ -148,12 +148,20 @@ p {
     text-align: center;
 }
 
+.light {
+    font-family: 'Untitled-Sans-Light', sans-serif;
+}
+
 .regular {
     font-family: 'Untitled-Sans-Regular', sans-serif;
 }
 
 .medium {
     font-family: 'Untitled-Sans-Medium', sans-serif;
+}
+
+.italic {
+    font-style: italic;
 }
 
 @media only screen and (max-width: 480px) {
