--- a/ddp-workspace/projects/ddp-prion/src/styles.scss
+++ b/ddp-workspace/projects/ddp-prion/src/styles.scss
@@ -3638,10 +3638,14 @@ app-third-party {
       margin: 0;
       padding: 0 0 0 15px;
     }
+
+    .ddp-radio-group-column {
+      padding: 0 0 0 10px;
+    }
   }
 
   &--requestSubmitted {
-    padding: 50px 0 0 0;
+    padding: 50px 40px 0 40px;
 
     .mat-dialog-content {
       padding: 0 100px 50px 100px;
