--- a/ddp-workspace/projects/ddp-prion/src/app-theme.scss
+++ b/ddp-workspace/projects/ddp-prion/src/app-theme.scss
@@ -1,10 +1,16 @@
 @import '~@angular/material/theming';
-@include mat-core();
+
+$custom-typography: mat-typography-config(
+  $font-family: 'Raleway, sans-serif'
+);
+
+//Override typography in core CSS
+@include mat-core($custom-typography);
 
 $md-primary: (
     50: transparent,
     100: #FFFFFF,
-    200: #F5F5F5,
+    200: #f9f3e8,
     300: #A8A8A8,
     400: #666666,
     500: #313131,
@@ -45,7 +51,7 @@ $md-primary: (
         1800: #000000,
         1900: #000000,
         2000: #000000
-    )    
+    )
 );
 
 $app-theme: mat-palette($md-primary);
