--- a/ddp-workspace/projects/ddp-testboston/src/app/components/help/help.component.html
+++ b/ddp-workspace/projects/ddp-testboston/src/app/components/help/help.component.html
@@ -1,5 +1,5 @@
 <main class="main">
-    <section class="section">
+    <section class="section help-section">
         <div class="content">
             <div class="help-block">
                 <h1 class="center" translate>Help.Title</h1>
