Add stay informed

--- a/ddp-workspace/projects/ddp-brain-v2/src/styles.scss
+++ b/ddp-workspace/projects/ddp-brain-v2/src/styles.scss
@@ -4,6 +4,7 @@
 @import './styles/dialogs.scss';
 @import './styles/password.scss';
 @import './styles/static-page.scss';
+@import './styles/stay-informed.scss';
 
 html,
 body {
