--- a/ddp-workspace/projects/ddp-brain-v2/src/styles/static-page.scss
+++ b/ddp-workspace/projects/ddp-brain-v2/src/styles/static-page.scss
@@ -2,9 +2,9 @@
 
 .static-page-title-section {
     padding: 2rem 0;
-    background-color: mat-color($app-theme, 500);
+    background-color: mat-color($app-theme, 800);
 }
 
 .static-page-content-section {
-    margin: 4rem 0;
+    margin: 4rem 0 6rem 0;
 }
