--- a/ddp-workspace/projects/ddp-brain-v2/src/app/components/data/data.component.scss
+++ b/ddp-workspace/projects/ddp-brain-v2/src/app/components/data/data.component.scss
@@ -59,6 +59,10 @@
     max-width: 430px;
     margin-bottom: 3rem;
 
+    &_modal {
+        cursor: pointer;
+    }
+
     &__image {
         max-width: 100%;
         height: auto;
