Add age up stuff

--- a/ddp-workspace/projects/ddp-brain-v2/src/styles.scss
+++ b/ddp-workspace/projects/ddp-brain-v2/src/styles.scss
@@ -5,6 +5,8 @@
 @import './styles/password.scss';
 @import './styles/static-page.scss';
 @import './styles/stay-informed.scss';
+@import './styles/age-up-thank-you.scss';
+@import './styles/activities.scss';
 
 html,
 body {
