--- a/ddp-workspace/projects/ddp-brain-v2/src/app-theme.scss
+++ b/ddp-workspace/projects/ddp-brain-v2/src/app-theme.scss
@@ -17,6 +17,8 @@ $md-primary: (
     700: #444444,
     800: #E1E4EB,
     900: #EBEBEB,
+    1000: #D4D9DC,
+    1100: #F4F4F4,
     contrast: (
         50: #000000,
         100: #000000,
@@ -32,7 +34,9 @@ $md-primary: (
         650: #000000,
         700: #000000,
         800: #000000,
-        900: #000000
+        900: #000000,
+        1000: #000000,
+        1100: #000000
     )
 );
 
