--- a/ddp-workspace/projects/ddp-testboston/src/app/components/help/help.component.html
+++ b/ddp-workspace/projects/ddp-testboston/src/app/components/help/help.component.html
@@ -15,18 +15,18 @@
                     <span translate>Help.Collect.Link</span>
                 </a>
                 <div class="placeholder">
-                    <p>Placeholder</p>
+                    <p translate>Help.Placeholder</p>
                 </div>
                 <h2 class="sub-title" translate>Help.UPS.Title</h2>
                 <p translate>Help.UPS.Text</p>
                 <div class="placeholder">
-                    <p>Placeholder</p>
+                    <p translate>Help.Placeholder</p>
                 </div>
                 <div class="placeholder">
-                    <p>Placeholder</p>
+                    <p translate>Help.Placeholder</p>
                 </div>
                 <div class="placeholder">
-                    <p>Placeholder</p>
+                    <p translate>Help.Placeholder</p>
                 </div>
             </div>
         </div>
