--- a/ddp-workspace/projects/ddp-testboston/src/styles.scss
+++ b/ddp-workspace/projects/ddp-testboston/src/styles.scss
@@ -129,7 +129,7 @@ li {
     }
 
     &_no-wrap {
-        white-space: initial;
+        white-space: initial !important;
     }
 
     &_semi-bold {
