--- a/ddp-workspace/projects/ddp-testboston/src/app/components/header/header.component.html
+++ b/ddp-workspace/projects/ddp-testboston/src/app/components/header/header.component.html
@@ -7,24 +7,24 @@
         <nav class="nav">
             <ul *ngIf="headerConfig.showMainButtons" class="navigation">
                 <li class="navigation__item">
-                    <a class="header-link" routerLink="/" fragment="about-the-study"
+                    <a class="header-link Link_no-wrap" routerLink="/" fragment="about-the-study"
                         (click)="scrollToAnchor('about-the-study')" translate>
                         Navigation.About
                     </a>
                 </li>
                 <li class="navigation__item">
-                    <a class="header-link" routerLink="/" fragment="q&a" (click)="scrollToAnchor('q&a')" translate>
+                    <a class="header-link Link_no-wrap" routerLink="/" fragment="q&a" (click)="scrollToAnchor('q&a')" translate>
                         Navigation.Q&A
                     </a>
                 </li>
                 <li class="navigation__item">
-                    <a class="header-link" routerLink="/" fragment="who-we-are" (click)="scrollToAnchor('who-we-are')"
+                    <a class="header-link Link_no-wrap" routerLink="/" fragment="who-we-are" (click)="scrollToAnchor('who-we-are')"
                         translate>
                         Navigation.WhoWeAre
                     </a>
                 </li>
                 <li class="navigation__item">
-                    <a class="header-link" routerLink="/" fragment="stay-informed"
+                    <a class="header-link Link_no-wrap" routerLink="/" fragment="stay-informed"
                         (click)="scrollToAnchor('stay-informed')" translate>
                         Navigation.StayInformed
                     </a>
