--- a/ddp-workspace/projects/ddp-testboston/src/app/components/help/help.component.scss
+++ b/ddp-workspace/projects/ddp-testboston/src/app/components/help/help.component.scss
@@ -9,8 +9,17 @@
 }
 
 .sub-title {
+    font-size: 1.625rem;
+    line-height: 2.0625rem;
     margin-top: 3.5rem;
     margin-bottom: 1.5rem;
+}
+
+.step-title {
+    font-size: 1.375rem;
+    line-height: 2.0625rem;
+    margin-bottom: 0;
+    margin-top: 2.5rem;
 }
 
 .placeholder {
