--- a/ddp-workspace/projects/ddp-prion/src/styles.scss
+++ b/ddp-workspace/projects/ddp-prion/src/styles.scss
@@ -3774,11 +3774,17 @@ toolkit-popup-with-checkbox {
   }
 }
 
+@media only screen and (max-width: 824px) {
+  .cdk-overlay-pane.toolkit-popup-with-checkbox {
+    margin-top: 150px !important;
+  }
+}
+
 @media only screen and (max-width: 767px) {
   .cdk-overlay-pane.toolkit-popup-with-checkbox {
     width: 300px !important;
     max-height: 200px !important;
     margin-top: 50% !important;
-    margin-right: calc(50% - 150px) !important;
+    margin-left: calc(50% - 150px) !important;
   }
 }
