--- a/ddp-workspace/projects/ddp-testboston/src/app/components/help/help.component.scss
+++ b/ddp-workspace/projects/ddp-testboston/src/app/components/help/help.component.scss
@@ -115,6 +115,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        font-weight: 700;
+
 
         &_step-1-first {
             top: 33.5%;
