--- a/ddp-workspace/projects/ddp-testboston/src/app/components/help/help.component.html
+++ b/ddp-workspace/projects/ddp-testboston/src/app/components/help/help.component.html
@@ -26,41 +26,41 @@
                     <span translate>Help.Return.Step1.Text.Part2</span>
                 </p>
                 <div class="step">
-                    <img lazy-resource class="step__image" src="assets/images/step-1.png"
+                    <img class="step__image" src="assets/images/step-1.png"
                         [alt]="'Help.Return.Step1.ImageAlt' | translate">
 
                     <div class="step__cube step__cube_step-1-first">1</div>
-                    <img lazy-resource class="step__arrow step__arrow_step-1-first-desktop"
-                        src="assets/images/arrow-right.svg" [alt]="'Help.ArrowAlt' | translate">
-                    <img lazy-resource class="step__arrow step__arrow_step-1-first-mobile"
-                        src="assets/images/arrow-left.svg" [alt]="'Help.ArrowAlt' | translate">
+                    <img class="step__arrow step__arrow_step-1-first-desktop" src="assets/images/arrow-right.svg"
+                        [alt]="'Help.ArrowAlt' | translate">
+                    <img class="step__arrow step__arrow_step-1-first-mobile" src="assets/images/arrow-left.svg"
+                        [alt]="'Help.ArrowAlt' | translate">
 
                     <div class="step__cube step__cube_step-1-second">2</div>
-                    <img lazy-resource class="step__arrow step__arrow_step-1-second-desktop"
-                        src="assets/images/arrow-right.svg" [alt]="'Help.ArrowAlt' | translate">
-                    <img lazy-resource class="step__arrow step__arrow_step-1-second-mobile"
-                        src="assets/images/arrow-left.svg" [alt]="'Help.ArrowAlt' | translate">
+                    <img class="step__arrow step__arrow_step-1-second-desktop" src="assets/images/arrow-right.svg"
+                        [alt]="'Help.ArrowAlt' | translate">
+                    <img class="step__arrow step__arrow_step-1-second-mobile" src="assets/images/arrow-left.svg"
+                        [alt]="'Help.ArrowAlt' | translate">
                 </div>
                 <h3 class="step-title" translate>Help.Return.Step2.Title</h3>
                 <p class="no-margin-top" translate>Help.Return.Step2.Text</p>
                 <div class="step">
-                    <img lazy-resource class="step__image" src="assets/images/step-2.png"
+                    <img class="step__image" src="assets/images/step-2.png"
                         [alt]="'Help.Return.Step2.ImageAlt' | translate">
 
                     <div class="step__cube step__cube_step-2-first">1</div>
-                    <img lazy-resource class="step__arrow step__arrow_step-2-first-desktop"
-                        src="assets/images/arrow-right.svg" [alt]="'Help.ArrowAlt' | translate">
-                    <img lazy-resource class="step__arrow step__arrow_step-2-first-mobile"
-                        src="assets/images/arrow-left.svg" [alt]="'Help.ArrowAlt' | translate">
+                    <img class="step__arrow step__arrow_step-2-first-desktop" src="assets/images/arrow-right.svg"
+                        [alt]="'Help.ArrowAlt' | translate">
+                    <img class="step__arrow step__arrow_step-2-first-mobile" src="assets/images/arrow-left.svg"
+                        [alt]="'Help.ArrowAlt' | translate">
 
                     <div class="step__cube step__cube_step-2-second">2</div>
-                    <img lazy-resource class="step__arrow step__arrow_step-2-second-desktop"
-                        src="assets/images/arrow-right.svg" [alt]="'Help.ArrowAlt' | translate">
-                    <img lazy-resource class="step__arrow step__arrow_step-2-second-mobile"
-                        src="assets/images/arrow-left.svg" [alt]="'Help.ArrowAlt' | translate">
+                    <img class="step__arrow step__arrow_step-2-second-desktop" src="assets/images/arrow-right.svg"
+                        [alt]="'Help.ArrowAlt' | translate">
+                    <img class="step__arrow step__arrow_step-2-second-mobile" src="assets/images/arrow-left.svg"
+                        [alt]="'Help.ArrowAlt' | translate">
 
                     <div class="step__cube step__cube_step-2-third">3</div>
-                    <img lazy-resource class="step__arrow step__arrow_step-2-third" src="assets/images/arrow-left.svg"
+                    <img class="step__arrow step__arrow_step-2-third" src="assets/images/arrow-left.svg"
                         [alt]="'Help.ArrowAlt' | translate">
                 </div>
 
