--- a/ddp-workspace/projects/ddp-osteo/src/app/components/faq/faq.component.html
+++ b/ddp-workspace/projects/ddp-osteo/src/app/components/faq/faq.component.html
@@ -23,9 +23,10 @@
                 <h3 class="no-margin">{{faqSection.Title}}</h3>
                 <mat-accordion hideToggle="true" multi="true" displayMode="flat">
                     <ng-container *ngFor="let item of faqSection.Items">
-                        <mat-expansion-panel>
+                        <mat-expansion-panel #panel>
                             <mat-expansion-panel-header collapsedHeight="100%" expandedHeight="100%">
-                                <mat-icon class="faq-block__icon">add</mat-icon>
+                                <mat-icon *ngIf="!panel.expanded" class="faq-block__icon">add</mat-icon>
+                                <mat-icon *ngIf="panel.expanded" class="faq-block__icon">clear</mat-icon>
                                 <p class="faq-block__question no-margin">{{item.Question}}</p>
                             </mat-expansion-panel-header>
                             <ng-template matExpansionPanelContent>
