--- a/ddp-workspace/projects/ddp-testboston/src/app/components/welcome/welcome.component.html
+++ b/ddp-workspace/projects/ddp-testboston/src/app/components/welcome/welcome.component.html
@@ -31,9 +31,10 @@
             <h2 class="center semi-bold" translate>HomePage.FaqSection.Title</h2>
             <mat-accordion hideToggle="true" multi="true" displayMode="flat">
                 <ng-container *ngFor="let item of 'HomePage.FaqSection.Items' | translate">
-                    <mat-expansion-panel>
+                    <mat-expansion-panel #panel>
                         <mat-expansion-panel-header collapsedHeight="100%" expandedHeight="100%">
-                            <mat-icon class="question-block__icon">add</mat-icon>
+                            <mat-icon *ngIf="!panel.expanded" class="question-block__icon">add</mat-icon>
+                            <mat-icon *ngIf="panel.expanded" class="question-block__icon">clear</mat-icon>
                             <p class="question-block__question no-margin">{{item.Question}}</p>
                         </mat-expansion-panel-header>
                         <ng-template matExpansionPanelContent>
